syntax = "proto3";

package pb;

// import "google/protobuf/timestamp.proto";

option go_package = "github.com/2landhnal/digital-preservation-shared-payload/pb";


message CheckFileFormatAcceptableRequest {
	string extension = 1;
	string version = 2;
}

message CheckFileFormatAcceptableResponse {
  	bool acceptable = 1;
}

